docs/api/qiskit/0.29/qiskit.circuit.library.SGate.mdx
---
title: SGate (v0.29)
description: API reference for qiskit.circuit.library.SGate in qiskit v0.29
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.SGate
---

# SGate

<Class id="qiskit.circuit.library.SGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/circuit/library/standard_gates/s.py" signature="SGate(label=None)" modifiers="class">
  Bases: `qiskit.circuit.gate.Gate`

  Single qubit S gate (Z\*\*0.5).

  It induces a $\pi/2$ phase, and is sometimes called the P gate (phase).

  This is a Clifford gate and a square-root of Pauli-Z.

  **Matrix Representation:**

$$
\begin{split}S = \begin{pmatrix}
1 & 0 \\
0 & i
\end{pmatrix}\end{split}
$$

  **Circuit symbol:**

  ```python
       ┌───┐
  q_0: ┤ S ├
       └───┘
  ```

  Equivalent to a $\pi/2$ radian rotation about the Z axis.

  Create new S gate.

  ## Methods Defined Here

  <span id="qiskit-circuit-library-sgate-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.SGate.inverse" signature="SGate.inverse()">
    Return inverse of S (SdgGate).
  </Function>

  ## Attributes

  ### decompositions

  <Attribute id="qiskit.circuit.library.SGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.SGate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.SGate.duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.SGate.label">
    Return instruction label

    **Return type**

    `str`
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.SGate.params">
    return instruction params.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.SGate.unit">
    Get the time unit of duration.
  </Attribute>
</Class>

